[B]Version 1.1.86[/B]
Supjav - fix listing
Whereismyporn - fix listing
LatestPorn - fix listing
Pornhits - fix listing and added Lookup info contextmenu
They Are Huge - login added, for 720p playback
EroticMV - new site