@@ -5,3 +5,4 @@ LatestPorn - fix listing
 Pornhits - fix listing and added Lookup info contextmenu
 They Are Huge - login added, for 720p playback
 EroticMV - new site
+Naughtyblog - added popular pornstars and sites
